--- a/bitmonero.conf
+++ b/bitmonero.conf
@@ -40,7 +40,7 @@ log-level=0                    # Minimal logs, WILL NOT log peers or wallets con
 p2p-bind-ip=0.0.0.0             #DEFAULT
 #p2p-bind-ip=127.0.0.1          #STEALTH MODE
 #p2p-bind-port=18080            # Bind to default port
-no-igd=1                        # Disable UPnP port mapping
+#no-igd=1                       #STEALTH MODE, oops, was told I screwed this up in the video. Keep this commented out. Disables UPnP port mapping. 
 #proxy=127.0.0.1:9050           #STEALTH MODE
 #hide-my-port=1                 #STEALTH MODE
 
@@ -71,7 +71,7 @@ max-txpool-weight=2684354560   # Maximum unconfirmed transactions pool size in b
 # Network limits
 out-peers=24              # This will enable much faster sync and tx awareness; the default 8 is suboptimal nowadays
 in-peers=48               # DEFAULT. The default is unlimited; we prefer to put a cap on this
-#in-peers=0               # STEALTH MODE, comment out above line if using
+#in-peers=0               # STEALTH MODE, comment out above line if using DEFAULT MODE
 
 limit-rate-up=1048576     # 1048576 kB/s == 1GB/s; a raise from default 2048 kB/s; contribute more to p2p network
 limit-rate-down=1048576   # 1048576 kB/s == 1GB/s; a raise from default 8192 kB/s; allow for faster initial sync
