--- a/bitmonero.conf
+++ b/bitmonero.conf
@@ -40,7 +40,7 @@ log-level=0                    # Minimal logs, WILL NOT log peers or wallets con
 p2p-bind-ip=0.0.0.0             #DEFAULT
 #p2p-bind-ip=127.0.0.1          #STEALTH MODE
 #p2p-bind-port=18080            # Bind to default port
-#no-igd=1                       #STEALTH MODE, oops, was told I screwed this up in the video. Keep this commented out. Disables UPnP port mapping. 
+#no-igd=1                       #STEALTH MODE, oops, was told I screwed this up in the video. Keep this commented out in DEFAULT MODE. Disables UPnP port mapping. 
 #proxy=127.0.0.1:9050           #STEALTH MODE
 #hide-my-port=1                 #STEALTH MODE
 
