--- a/bitmonero.conf
+++ b/bitmonero.conf
@@ -36,22 +36,28 @@ log-file=~/.bitmonero/bitmonero.log
 log-level=0                    # Minimal logs, WILL NOT log peers or wallets connecting
 
 
-# P2P full node
+# P2P node
 p2p-bind-ip=0.0.0.0             #DEFAULT
-#p2p-bind-ip=127.0.0.1          #STEALTH MODE
-#p2p-bind-port=18080            # Bind to default port
+#p2p-bind-ip=127.0.0.1          #STEALTH MODE (localhost)
+#p2p-bind-port=18080            #Bind to default port
+p2p-use-ipv6=1			#Enable use of IPv6
+p2p-bind-ipv6-address=::	#DEFAULT (IPv6)
+#p2p-bind-ipv6-address=::1	#STEALTH MODE (IPv6) (localhost)
+#p2p-bind-port-ipv6=18080	#Bind to default port
 #no-igd=1                       #STEALTH MODE, oops, was told I screwed this up in the video. Keep this commented out in DEFAULT MODE. Disables UPnP port mapping. 
 #proxy=127.0.0.1:9050           #STEALTH MODE
 #hide-my-port=1                 #STEALTH MODE
 
 
 # RPC open node
-#public-node=1                    # Advertise to other users they can use this node for connecting their wallets
-rpc-restricted-bind-ip=0.0.0.0    #DEFAULT
-#rpc-restricted-bind-ip=127.0.0.1 #STEALTH MODE, Bind to all interfaces (the Open Node)
-rpc-restricted-bind-port=18089    # Bind to a new RESTICTED port (the Open Node)
+#public-node=1                    	# Advertise to other users they can use this node for connecting their wallets
+rpc-restricted-bind-ip=0.0.0.0		#DEFAULT, Bind to all interfaces (the Open Node)
+#rpc-restricted-bind-ip=127.0.0.1 	#STEALTH MODE, Bind to Localhost
+rpc-restricted-bind-ipv6-address=::	#DEFAULT (IPv6), Bind to all interfaces (the Open Node)
+#rpc-restricted-bind-ipv6-address=::1	#STEALTH MODE (IPv6), Bind to Localhost
+rpc-restricted-bind-port=18089		# Bind to a new RESTICTED port (the Open Node)
 #rpc-login=username:password      #username:password
-#rpc-node onion link
+#NOTE: add rpc-node onion link here (keep the "#" at the start of the line)
 
 # RPC TLS
 rpc-ssl=autodetect             # Use TLS if client wallet supports it (Default); A new certificate will be regenerated every restart
@@ -89,5 +95,3 @@ anonymous-inbound=yourlongv3onionaddress.onion:18084,127.0.0.1:18084 # Tor-p2p
 
 # Tor: be forgiving to connecting wallets
 disable-rpc-ban=1
-
-                                                                                                                                                                                                                      
