add commands and info for static ssl certs

--- a/bitmonero.conf
+++ b/bitmonero.conf
@@ -60,7 +60,9 @@ rpc-restricted-bind-port=18089		# Bind to a new RESTICTED port (the Open Node)
 #NOTE: add rpc-node onion link here (keep the "#" at the start of the line)
 
 # RPC TLS
-rpc-ssl=autodetect             # Use TLS if client wallet supports it (Default); A new certificate will be regenerated every restart
+rpc-ssl=autodetect				#Use TLS if client wallet supports it (Default); A new certificate will be regenerated every restart unless next 2 lines are uncommented (options: enabled|autodetect|disabled)
+#rpc-ssl-certificate=./path/to/cert		#Use static cert (generate with monero-gen-ssl-cert)
+#rpc-ssl-private-key=./path/to/cert_Private_key	#use static cert private key (generated with monero-gen-ssl-cert)
 
 # ZMQ
 #zmq-rpc-bind-ip=127.0.0.1      # Default 127.0.0.1
