--- a/bitmonero.conf
+++ b/bitmonero.conf
@@ -67,7 +67,7 @@ rpc-ssl=autodetect				#Use TLS if client wallet supports it (Default); A new cer
 # ZMQ
 #zmq-rpc-bind-ip=127.0.0.1      # Default 127.0.0.1
 #zmq-rpc-bind-port=18082        # Default 18082
-zmq-pub=tcp://127.0.0.1:18083  # ZMQ pub
+zmq-pub=tcp://127.0.0.1:18083	# ZMQ pub
 #no-zmq=1                       # Disable ZMQ RPC server
 
 # Mempool size
@@ -77,8 +77,8 @@ max-txpool-weight=2684354560   # Maximum unconfirmed transactions pool size in b
 #db-sync-mode=safe:sync        # Slow but reliable db writes
 
 # Network limits
-out-peers=24              # This will enable much faster sync and tx awareness; the default 8 is suboptimal nowadays
-in-peers=48               # DEFAULT. The default is unlimited; we prefer to put a cap on this
+out-peers=24              # Your node connects to this many peers. This will enable much faster sync and tx awareness; the default 8 is suboptimal nowadays
+in-peers=48               # DEFAULT. The default is unlimited; we prefer to put a cap on this. This is how may nodes can connect to you.
 #in-peers=0               # STEALTH MODE, comment out above line if using DEFAULT MODE
 
 limit-rate-up=1048576     # 1048576 kB/s == 1GB/s; a raise from default 2048 kB/s; contribute more to p2p network
@@ -91,7 +91,7 @@ tx-proxy=tor,127.0.0.1:9050,16,disable_noise  # Tor
 
 # Tor/I2P: tell monerod your onion address so it can be advertised on P2P network
 #anonymous-inbound=PASTE_YOUR_I2P_HOSTNAME,127.0.0.1:18085,64         # I2P
-anonymous-inbound=yourlongv3onionaddress.onion:18084,127.0.0.1:18084 # Tor-p2p
+anonymous-inbound=YourLongV3OnionAddress.onion:18084,127.0.0.1:18084 # Tor-p2p
 
 
 
